Fix extra padding on the bottom of the rows

--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -235,7 +235,7 @@ p {
 //ROW STUFF
 
 //small row
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1300px) {
     .row-pic-right{
         display: none;
     }
@@ -261,14 +261,26 @@ p {
             padding: 0% 5% 5% 5%;
         }
     }
+
+    .small-row-padding{
+        padding-top: 50px;
+    }
 }
 
 //To hide the rows when they are not needed
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 1301px) {
     .small-stacked-row{
         display: none;
     
     }
+
+    .small-row-padding{
+        display: none;
+    }
+}
+
+.space-after-rows {
+    padding-top: 50px;
 }
 
 
@@ -292,7 +304,7 @@ p {
         h1{
             padding: 0% 10% 0% 0%;
             left: 20px;
-
+            top: 20px;
     
         }
     
@@ -347,7 +359,7 @@ p {
     //Title
     h1{
         position: absolute; /* This is absolute to make it overlay on the image*/
-        font-size: 70px;
+        font-size: calc(clamp(3rem, 4vw, 6rem));;
         top: 0px;
 
     }
